--- a/contactos/templates/editcontact.html
+++ b/contactos/templates/editcontact.html
@@ -107,7 +107,7 @@ Agenda - Editar
         
         <div class="button-panel">
             <button class="back" id="cancel-create"><a href="/inicio">Regresar</a></button>
-            <button class="done" id="create-contact" type="submit" value="save">Actualizar Contacto</button>
+            <button class="done" id="create-contact" type="submit">Actualizar Contacto</button>
         </div>
     </form>
 
